--- a/iPhone OS/Classes/AppViewController-iPhone5.xib
+++ b/iPhone OS/Classes/AppViewController-iPhone5.xib
@@ -52,6 +52,7 @@
 								<string key="NSFrame">{{0, -20}, {320, 568}}</string>
 								<reference key="NSSuperview" ref="426341928"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="15260161"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
@@ -112,6 +113,7 @@
 								<string key="NSFrame">{{55, 183}, {210, 44}}</string>
 								<reference key="NSSuperview" ref="426341928"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1009273036"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 								<float key="IBUIAlpha">0.76760566234588623</float>
@@ -156,6 +158,7 @@
 								<string key="NSFrame">{{55, 287}, {210, 44}}</string>
 								<reference key="NSSuperview" ref="426341928"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="951363760"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 								<float key="IBUIAlpha">0.76760566234588623</float>
@@ -185,6 +188,7 @@
 								<string key="NSFrame">{{55, 235}, {210, 44}}</string>
 								<reference key="NSSuperview" ref="426341928"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="56801825"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 								<float key="IBUIAlpha">0.76760566234588623</float>
@@ -212,6 +216,7 @@
 						<string key="NSFrameSize">{320, 548}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="133018482"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -226,6 +231,7 @@
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="426341928"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MC4xMjUgMC4xMjUgMC4xMjUAA</bytes>
